--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "host": "vite --host"
+    "host": "vite --host"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -18,6 +18,7 @@
     "@mui/joy": "^5.0.0-beta.48",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "hamburger-react": "^2.5.1",
     "prop-types": "^15.8.1",
